----------------------------------------------------------------------
 OmegaT 3.1.9 update 2
----------------------------------------------------------------------
   1 Enhancement
   3 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.9 update 2 vs. 3.1.9 update 1

  Other enhancements:

  - Updated LanguageTool to 2.2

  Bug fixes:

  - In the default source document exclusion patterns, "CVS" folders were
entered as "CSV"

  - Too many duplicate segments in the popup menu
  https://sourceforge.net/p/omegat/bugs/744/

  - Exclusion masks not working correctly under Windows 
  https://sourceforge.net/p/omegat/bugs/746/

  Localisation updates:

  - Brazilian Portuguese localisation updated to 3.0.7 (UI, documentation, readme)
  - Japanese localisation updated to 3.1.9 update 1 (UI)

----------------------------------------------------------------------
 OmegaT 3.1.9 update 1 (2015-04-15)
----------------------------------------------------------------------
   1 Enhancement
   3 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
3.1.9 update 1 vs. 3.1.9

  Implemented requests:

  - Change auto-completion mode access keys 
  https://sourceforge.net/p/omegat/feature-requests/1073/

  Bug fixes:
  
  - The OK and Cancel buttons of Options > Editing Behaviour were not
displayed correctly

  - Newly assigned scripts execute several times 
  https://sourceforge.net/p/omegat/bugs/737/

  - The project-specific file filter configuration was deleted when
quitting OmegaT

----------------------------------------------------------------------
 OmegaT 3.1.9 (2015-03-09)
----------------------------------------------------------------------
  21 Enhancements
  13 Bug fixes
   6 Localisation updates
----------------------------------------------------------------------
3.1.9 vs. 3.1.8

  Implemented requests:

  - Machine translation with Yandex 